test/good/functions/args08.px

func f(String s: "abc", Int n) Int def
    return s.length + n

print f("", 4)
print f(n=10)
