test/bad/functions/args02.px

func f(s: String): Void def
    s = 5
    return

f()
